src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_return.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction return.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    return 3;
}