src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_return_oubli_fin.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le return
//
// Resultats:
//    Ligne 12 : Erreur (oubli ;)
//    
//
// Historique:
//    cree le 04/01/2023

{
    return 1
}
